--- a/views/pages/registration/index.ejs
+++ b/views/pages/registration/index.ejs
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style/registration.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -54,6 +54,6 @@
         </form>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script/registration.js"></script>
   </body>
 </html>
