--- a/views/pages/registration/login.ejs
+++ b/views/pages/registration/login.ejs
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style/registration.css" />
   </head>
   <body>
     <div class="container">
@@ -35,6 +35,6 @@
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script/registration.js"></script>
   </body>
 </html>
