JS2_functions_grid completed

--- a/views/pages/registration/projects.ejs
+++ b/views/pages/registration/projects.ejs
@@ -21,6 +21,14 @@
                 <a class="projectName" href="/dynamicGrid">JS1: Dynamic Grid</a>
               </td>
             </tr>
+            <tr>
+              <td>2</td>
+              <td>
+                <a class="projectName" href="/functionGrid"
+                  >JS2: Functions Grid</a
+                >
+              </td>
+            </tr>
           </table>
         </div>
         <a href="/logout"><center>Log out</center></a>
