JS3_kuku_cube completed

--- a/views/pages/registration/projects.ejs
+++ b/views/pages/registration/projects.ejs
@@ -29,6 +29,12 @@
                 >
               </td>
             </tr>
+            <tr>
+              <td>3</td>
+              <td>
+                <a class="projectName" href="/kukuCube">JS3: Kuku Cube</a>
+              </td>
+            </tr>
           </table>
         </div>
         <a href="/logout"><center>Log out</center></a>
