CSS1_ehya completed

--- a/views/pages/registration/projects.ejs
+++ b/views/pages/registration/projects.ejs
@@ -35,6 +35,16 @@
                 <a class="projectName" href="/kukuCube">JS3: Kuku Cube</a>
               </td>
             </tr>
+            <tr>
+              <td>4</td>
+              <td>
+                <a class="projectName" href="/ticTacToe">JS4: Tic Tac Toe</a>
+              </td>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td><a class="projectName" href="/ehya">CSS1: ehya</a></td>
+            </tr>
           </table>
         </div>
         <a href="/logout"><center>Log out</center></a>
