CSS2_Awan_Hoster completed

--- a/views/pages/registration/projects.ejs
+++ b/views/pages/registration/projects.ejs
@@ -45,6 +45,12 @@
               <td>5</td>
               <td><a class="projectName" href="/ehya">CSS1: ehya</a></td>
             </tr>
+            <tr>
+              <td>6</td>
+              <td>
+                <a class="projectName" href="/AwanHoster">CSS2: Awan Hoster</a>
+              </td>
+            </tr>
           </table>
         </div>
         <a href="/logout"><center>Log out</center></a>
