CSS3_HireX completed

--- a/views/pages/registration/projects.ejs
+++ b/views/pages/registration/projects.ejs
@@ -51,6 +51,10 @@
                 <a class="projectName" href="/AwanHoster">CSS2: Awan Hoster</a>
               </td>
             </tr>
+            <tr>
+              <td>7</td>
+              <td><a class="projectName" href="/HireX">CSS3: HireX</a></td>
+            </tr>
           </table>
         </div>
         <a href="/logout"><center>Log out</center></a>
