EXP2 - Attendence and Result completed

--- a/views/pages/registration/projects.ejs
+++ b/views/pages/registration/projects.ejs
@@ -18,7 +18,9 @@
             <tr>
               <td>1</td>
               <td>
-                <a class="projectName" href="/dynamicGrid">JS1: Dynamic Grid</a>
+                <a class="projectName" href="/dynamicGrid"
+                  >JS1: Dynamic Table</a
+                >
               </td>
             </tr>
             <tr>
@@ -54,6 +56,31 @@
             <tr>
               <td>7</td>
               <td><a class="projectName" href="/HireX">CSS3: HireX</a></td>
+            </tr>
+            <tr>
+              <td>8</td>
+              <td>
+                EXP1: Grid
+                <br />
+                <a class="projectName" href="/EXP1/data">All Data</a><br />
+                <a class="projectName" href="/EXP1/sorted?id=1&field=std_fname"
+                  >Sorted Data</a
+                ><br />
+                <a class="projectName" href="/EXP1/navigation"
+                  >Navigation Component</a
+                >
+              </td>
+            </tr>
+
+            <tr>
+              <td>9</td>
+              <td>
+                EXP2: Attendence And Results
+                <br />
+                <a class="projectName" href="/EXP2/attendence">Attendence</a
+                ><br />
+                <a class="projectName" href="/EXP2/results">Results</a>
+              </td>
             </tr>
           </table>
         </div>
