EXP3 - Seach with entered query with sorting (Task 0 ) completed

--- a/views/pages/registration/projects.ejs
+++ b/views/pages/registration/projects.ejs
@@ -66,12 +66,8 @@
                 <a class="projectName" href="/EXP1/sorted?id=1&field=std_fname"
                   >Sorted Data</a
                 ><br />
-                <a class="projectName" href="/EXP1/navigation"
-                  >Navigation Component</a
-                >
               </td>
             </tr>
-
             <tr>
               <td>9</td>
               <td>
@@ -80,6 +76,14 @@
                 <a class="projectName" href="/EXP2/attendence">Attendence</a
                 ><br />
                 <a class="projectName" href="/EXP2/results">Results</a>
+              </td>
+            </tr>
+            <tr>
+              <td>10</td>
+              <td>
+                EXP3: Searching and Sorting from entered Query
+                <br />
+                <a class="projectName" href="/EXP3/home">Enter Query</a>
               </td>
             </tr>
           </table>
