EXP4 - Searching with multiple search inputs completed

--- a/views/pages/registration/projects.ejs
+++ b/views/pages/registration/projects.ejs
@@ -86,6 +86,14 @@
                 <a class="projectName" href="/EXP3/home">Enter Query</a>
               </td>
             </tr>
+            <tr>
+              <td>11</td>
+              <td>
+                EXP4: Searching with multiple search inputs
+                <br />
+                <a class="projectName" href="/EXP4/input">Enter Query</a>
+              </td>
+            </tr>
           </table>
         </div>
         <a href="/logout"><center>Log out</center></a>
