--- a/views/pages/ExpressTasks/EXP1_grid/navigation_data.ejs
+++ b/views/pages/ExpressTasks/EXP1_grid/navigation_data.ejs
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="navigation_data.css" />
+    <link rel="stylesheet" href="/style/ExpressTasks/EXP1_grid.css" />
   </head>
   <body>
     <div class="container">
