--- a/views/pages/ExpressTasks/EXP2_attendence/details.ejs
+++ b/views/pages/ExpressTasks/EXP2_attendence/details.ejs
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Detail</title>
-    <link rel="stylesheet" href="data.css" />
+    <link rel="stylesheet" href="/style/ExpressTasks/EXP2_attendence.css" />
   </head>
   <body>
     <div id="container">
