EXP5 - delimeter search completed

--- a/views/pages/registration/projects.ejs
+++ b/views/pages/registration/projects.ejs
@@ -81,17 +81,25 @@
             <tr>
               <td>10</td>
               <td>
-                EXP3: Searching and Sorting from entered Query
-                <br />
-                <a class="projectName" href="/EXP3/home">Enter Query</a>
+                <a class="projectName" href="/EXP3/home"
+                  >EXP3: Searching and Sorting from entered Query</a
+                >
               </td>
             </tr>
             <tr>
               <td>11</td>
               <td>
-                EXP4: Searching with multiple search inputs
-                <br />
-                <a class="projectName" href="/EXP4/input">Enter Query</a>
+                <a class="projectName" href="/EXP4/input"
+                  >EXP4: Searching with multiple search inputs</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <td>12</td>
+              <td>
+                <a class="projectName" href="/EXP5/delimeter"
+                  >EXP5: Delimeter Search</a
+                >
               </td>
             </tr>
           </table>
