EXP6 - JSONplaceholder (Sanket sir task) completed

--- a/views/pages/registration/projects.ejs
+++ b/views/pages/registration/projects.ejs
@@ -18,7 +18,7 @@
             <tr>
               <td>1</td>
               <td>
-                <a class="projectName" href="/dynamicGrid"
+                <a class="projectName" href="/dynamicGrid" target="_blank"
                   >JS1: Dynamic Table</a
                 >
               </td>
@@ -26,7 +26,7 @@
             <tr>
               <td>2</td>
               <td>
-                <a class="projectName" href="/functionGrid"
+                <a class="projectName" href="/functionGrid" target="_blank"
                   >JS2: Functions Grid</a
                 >
               </td>
@@ -34,36 +34,55 @@
             <tr>
               <td>3</td>
               <td>
-                <a class="projectName" href="/kukuCube">JS3: Kuku Cube</a>
+                <a class="projectName" href="/kukuCube" target="_blank"
+                  >JS3: Kuku Cube</a
+                >
               </td>
             </tr>
             <tr>
               <td>4</td>
               <td>
-                <a class="projectName" href="/ticTacToe">JS4: Tic Tac Toe</a>
+                <a class="projectName" href="/ticTacToe" target="_blank"
+                  >JS4: Tic Tac Toe</a
+                >
               </td>
             </tr>
             <tr>
               <td>5</td>
-              <td><a class="projectName" href="/ehya">CSS1: ehya</a></td>
+              <td>
+                <a class="projectName" href="/ehya" target="_blank"
+                  >CSS1: ehya</a
+                >
+              </td>
             </tr>
             <tr>
               <td>6</td>
               <td>
-                <a class="projectName" href="/AwanHoster">CSS2: Awan Hoster</a>
+                <a class="projectName" href="/AwanHoster" target="_blank"
+                  >CSS2: Awan Hoster</a
+                >
               </td>
             </tr>
             <tr>
               <td>7</td>
-              <td><a class="projectName" href="/HireX">CSS3: HireX</a></td>
+              <td>
+                <a class="projectName" href="/HireX" target="_blank"
+                  >CSS3: HireX</a
+                >
+              </td>
             </tr>
             <tr>
               <td>8</td>
               <td>
                 EXP1: Grid
                 <br />
-                <a class="projectName" href="/EXP1/data">All Data</a><br />
-                <a class="projectName" href="/EXP1/sorted?id=1&field=std_fname"
+                <a class="projectName" href="/EXP1/data" target="_blank"
+                  >All Data</a
+                ><br />
+                <a
+                  class="projectName"
+                  href="/EXP1/sorted?id=1&field=std_fname"
+                  target="_blank"
                   >Sorted Data</a
                 ><br />
               </td>
@@ -73,15 +92,18 @@
               <td>
                 EXP2: Attendence And Results
                 <br />
-                <a class="projectName" href="/EXP2/attendence">Attendence</a
+                <a class="projectName" href="/EXP2/attendence" target="_blank"
+                  >Attendence</a
                 ><br />
-                <a class="projectName" href="/EXP2/results">Results</a>
+                <a class="projectName" href="/EXP2/results" target="_blank"
+                  >Results</a
+                >
               </td>
             </tr>
             <tr>
               <td>10</td>
               <td>
-                <a class="projectName" href="/EXP3/home"
+                <a class="projectName" href="/EXP3/home" target="_blank"
                   >EXP3: Searching and Sorting from entered Query</a
                 >
               </td>
@@ -89,7 +111,7 @@
             <tr>
               <td>11</td>
               <td>
-                <a class="projectName" href="/EXP4/input"
+                <a class="projectName" href="/EXP4/input" target="_blank"
                   >EXP4: Searching with multiple search inputs</a
                 >
               </td>
@@ -97,8 +119,16 @@
             <tr>
               <td>12</td>
               <td>
-                <a class="projectName" href="/EXP5/delimeter"
+                <a class="projectName" href="/EXP5/delimeter" target="_blank"
                   >EXP5: Delimeter Search</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <td>13</td>
+              <td>
+                <a class="projectName" href="/EXP6/post" target="_blank"
+                  >EXP6: JSONplaceholder</a
                 >
               </td>
             </tr>
