EXP7 - job application completed

--- a/views/pages/registration/projects.ejs
+++ b/views/pages/registration/projects.ejs
@@ -132,6 +132,19 @@
                 >
               </td>
             </tr>
+            <tr>
+              <td>14</td>
+              <td>
+                EXP7: Job Application
+                <br />
+                <a class="projectName" href="/EXP7/insert" target="_blank"
+                  >Insert</a
+                ><br />
+                <a class="projectName" href="/EXP7/display" target="_blank"
+                  >Display</a
+                >
+              </td>
+            </tr>
           </table>
         </div>
         <a href="/logout"><center>Log out</center></a>
