Unified database added

--- a/views/pages/registration/projects.ejs
+++ b/views/pages/registration/projects.ejs
@@ -8,12 +8,12 @@
   <body>
     <div class="container">
       <div id="ip-holder">
-        <h1>Projects</h1>
+        <h2>Tasks</h2>
         <div id="table-div">
           <table border="1">
             <tr>
-              <th>Project No.</th>
-              <th>Project Name</th>
+              <th>Task No.</th>
+              <th>Task Name</th>
             </tr>
             <tr>
               <td>1</td>
