EXP8 - Timezone converter added

--- a/views/pages/registration/projects.ejs
+++ b/views/pages/registration/projects.ejs
@@ -145,9 +145,17 @@
                 >
               </td>
             </tr>
+            <tr>
+              <td>15</td>
+              <td>
+                <a class="projectName" href="/EXP8" target="_blank"
+                  >EXP8: Time Zone Converter
+                </a>
+              </td>
+            </tr>
           </table>
         </div>
-        <a href="/logout"><center>Log out</center></a>
+        <a href="/logout" id="logout"><center>Log out</center></a>
       </div>
     </div>
   </body>
