--- a/public/style/registration.css
+++ b/public/style/registration.css
@@ -23,6 +23,17 @@ td {
   text-decoration: none;
 }
 
+#logout {
+  margin: 10px;
+  padding: 10px;
+  width: 100px;
+  background-color: red;
+  border-radius: 10px;
+  color: white;
+  text-decoration: none;
+  font-size: large;
+}
+
 #ip-holder {
   display: flex;
   flex-direction: column;
