EXP8 - Job application bugs fixed

--- a/views/pages/ExpressTasks/EXP7_job_application/index.ejs
+++ b/views/pages/ExpressTasks/EXP7_job_application/index.ejs
@@ -19,51 +19,13 @@
         <div id="header_div">
           <table id="header_table">
             <tr>
-              <td
-                onclick="headerClick(this)"
-                class="head-td"
-                id="basic-details_head"
-              >
-                Basic Details
-              </td>
-              <td
-                onclick="headerClick(this)"
-                class="head-td"
-                id="education_head"
-              >
-                Education
-              </td>
-              <td onclick="headerClick(this)" class="head-td" id="workExp_head">
-                Work Experience
-              </td>
-              <td
-                onclick="headerClick(this)"
-                class="head-td"
-                id="language_head"
-              >
-                Language
-              </td>
-              <td
-                onclick="headerClick(this)"
-                class="head-td"
-                id="technology_head"
-              >
-                Technology
-              </td>
-              <td
-                onclick="headerClick(this)"
-                class="head-td"
-                id="referenceContact_head"
-              >
-                References
-              </td>
-              <td
-                onclick="headerClick(this)"
-                class="head-td"
-                id="preference_head"
-              >
-                Preferences
-              </td>
+              <td class="head-td" id="basic-details_head">Basic Details</td>
+              <td class="head-td" id="education_head">Education</td>
+              <td class="head-td" id="workExp_head">Work Experience</td>
+              <td class="head-td" id="language_head">Language</td>
+              <td class="head-td" id="technology_head">Technology</td>
+              <td class="head-td" id="referenceContact_head">References</td>
+              <td class="head-td" id="preference_head">Preferences</td>
             </tr>
           </table>
         </div>
