--- a/views/pages/registration/login.ejs
+++ b/views/pages/registration/login.ejs
@@ -9,7 +9,7 @@
     <div class="container">
       <div id="ip-holder">
         <div id="fin-div">
-          <h1><center>Login</center></h1>
+          <p id="heading">Login</p>
           <form id="form">
             <div class="ip-fields">
               <label for="loginEmail">Email</label><br />
