--- a/views/pages/registration/projects.ejs
+++ b/views/pages/registration/projects.ejs
@@ -6,156 +6,172 @@
     <link rel="stylesheet" href="style/registration.css" />
   </head>
   <body>
-    <div class="container">
-      <div id="ip-holder">
-        <h2>Tasks</h2>
+    <div class="container" id="tasks-con">
+      <div id="table-holder">
+        <div id="logout-div">
+          <a href="/logout" id="logout">Log out</a>
+        </div>
         <div id="table-div">
-          <table border="1">
+          <table id="task-table">
             <tr>
-              <th>Task No.</th>
-              <th>Task Name</th>
+              <td colspan="3" style="font-weight: bold; font-size: x-large">
+                <center>TASKS</center>
+              </td>
             </tr>
             <tr>
-              <td>1</td>
+              <td colspan="2" class="heads">&#10162; JS</td>
+            </tr>
+            <tr>
+              <td class="num-cell">1</td>
               <td>
+                JS1:
                 <a class="projectName" href="/dynamicGrid" target="_blank"
-                  >JS1: Dynamic Table</a
+                  >Dynamic Table</a
                 >
               </td>
             </tr>
             <tr>
-              <td>2</td>
+              <td class="num-cell">2</td>
               <td>
-                <a class="projectName" href="/functionGrid" target="_blank"
-                  >JS2: Functions Grid</a
+                JS2:
+                <a class="projectName" href="/functionGrid" target="_blank">
+                  Functions Grid</a
                 >
               </td>
             </tr>
             <tr>
-              <td>3</td>
+              <td class="num-cell">3</td>
               <td>
-                <a class="projectName" href="/kukuCube" target="_blank"
-                  >JS3: Kuku Cube</a
+                JS3:
+                <a class="projectName" href="/kukuCube" target="_blank">
+                  Kuku Cube</a
                 >
               </td>
             </tr>
             <tr>
-              <td>4</td>
+              <td class="num-cell">4</td>
               <td>
-                <a class="projectName" href="/ticTacToe" target="_blank"
-                  >JS4: Tic Tac Toe</a
+                JS4:
+                <a class="projectName" href="/ticTacToe" target="_blank">
+                  Tic Tac Toe</a
                 >
               </td>
             </tr>
             <tr>
-              <td>5</td>
+              <td colspan="2" class="heads">&#10162; CSS</td>
+            </tr>
+            <tr>
+              <td class="num-cell">5</td>
               <td>
-                <a class="projectName" href="/ehya" target="_blank"
-                  >CSS1: ehya</a
+                CSS1:
+                <a class="projectName" href="/ehya" target="_blank"> ehya</a>
+              </td>
+            </tr>
+            <tr>
+              <td class="num-cell">6</td>
+              <td>
+                CSS2:
+                <a class="projectName" href="/AwanHoster" target="_blank">
+                  Awan Hoster</a
                 >
               </td>
             </tr>
             <tr>
-              <td>6</td>
+              <td class="num-cell">7</td>
               <td>
-                <a class="projectName" href="/AwanHoster" target="_blank"
-                  >CSS2: Awan Hoster</a
-                >
+                CSS3:
+                <a class="projectName" href="/HireX" target="_blank"> HireX</a>
               </td>
             </tr>
             <tr>
-              <td>7</td>
-              <td>
-                <a class="projectName" href="/HireX" target="_blank"
-                  >CSS3: HireX</a
-                >
-              </td>
+              <td colspan="2" class="heads">&#10162; EXPRESS</td>
             </tr>
             <tr>
-              <td>8</td>
+              <td class="num-cell">8</td>
               <td>
-                EXP1: Grid
-                <br />
+                EXP1:
                 <a class="projectName" href="/EXP1/data" target="_blank"
-                  >All Data</a
-                ><br />
+                  >Full Grid</a
+                >
+                and
                 <a
                   class="projectName"
                   href="/EXP1/sorted?id=1&field=std_fname"
                   target="_blank"
-                  >Sorted Data</a
+                  >Sorted Grid</a
                 ><br />
               </td>
             </tr>
             <tr>
-              <td>9</td>
+              <td class="num-cell">9</td>
               <td>
-                EXP2: Attendence And Results
-                <br />
+                EXP2:
+
                 <a class="projectName" href="/EXP2/attendence" target="_blank"
                   >Attendence</a
-                ><br />
+                >
+                and
                 <a class="projectName" href="/EXP2/results" target="_blank"
                   >Results</a
                 >
               </td>
             </tr>
             <tr>
-              <td>10</td>
+              <td class="num-cell">10</td>
               <td>
-                <a class="projectName" href="/EXP3/home" target="_blank"
-                  >EXP3: Searching and Sorting from entered Query</a
+                EXP3:
+                <a class="projectName" href="/EXP3/home" target="_blank">
+                  Searching and Sorting from entered Query</a
                 >
               </td>
             </tr>
             <tr>
-              <td>11</td>
+              <td class="num-cell">11</td>
               <td>
-                <a class="projectName" href="/EXP4/input" target="_blank"
-                  >EXP4: Searching with multiple search inputs</a
+                EXP4:
+                <a class="projectName" href="/EXP4/input" target="_blank">
+                  Searching with multiple search inputs</a
                 >
               </td>
             </tr>
             <tr>
-              <td>12</td>
+              <td class="num-cell">12</td>
               <td>
-                <a class="projectName" href="/EXP5/delimeter" target="_blank"
-                  >EXP5: Delimeter Search</a
+                EXP5:
+                <a class="projectName" href="/EXP5/delimeter" target="_blank">
+                  Delimeter Search</a
                 >
               </td>
             </tr>
             <tr>
-              <td>13</td>
+              <td class="num-cell">13</td>
               <td>
-                <a class="projectName" href="/EXP6/post" target="_blank"
-                  >EXP6: JSONplaceholder</a
+                EXP6:
+                <a class="projectName" href="/EXP6/post" target="_blank">
+                  JSONplaceholder</a
                 >
               </td>
             </tr>
             <tr>
-              <td>14</td>
+              <td class="num-cell">14</td>
               <td>
-                EXP7: Job Application
-                <br />
+                EXP7:
                 <a class="projectName" href="/EXP7/insert" target="_blank"
-                  >Insert</a
-                ><br />
-                <a class="projectName" href="/EXP7/display" target="_blank"
-                  >Display</a
+                  >Job Application</a
                 >
               </td>
             </tr>
             <tr>
-              <td>15</td>
+              <td class="num-cell">15</td>
               <td>
-                <a class="projectName" href="/EXP8" target="_blank"
-                  >EXP8: Time Zone Converter
+                EXP8:
+                <a class="projectName" href="/EXP8" target="_blank">
+                  Time Zone Converter
                 </a>
               </td>
             </tr>
           </table>
         </div>
-        <a href="/logout" id="logout"><center>Log out</center></a>
       </div>
     </div>
   </body>
