--- a/views/partials/EXP7_job_application/basic_details.ejs
+++ b/views/partials/EXP7_job_application/basic_details.ejs
@@ -103,7 +103,7 @@
         </td>
         <td>
           <select name="states" id="states" onchange="selectedState(this)">
-            <option>--Select State--</option>
+            <option>Select State</option>
           </select>
           <span class="error"><p id="state_error"></p></span>
         </td>
@@ -112,7 +112,7 @@
         </td>
         <td>
           <select name="cities" id="cities">
-            <option>--Select City--</option>
+            <option>Select City</option>
           </select>
           <span class="error"><p id="city_error"></p></span>
         </td>
